--- a/frontend/src/components/Jogo/Jogo.css
+++ b/frontend/src/components/Jogo/Jogo.css
@@ -1,6 +1,9 @@
 .jogo {
     background: #9be5e4;
     height: 100vh;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
   }
   
   .nuvens {
@@ -8,5 +11,49 @@
   
     position: absolute;
     top: 30px;
-    left: 50%;
+    
+    animation: mover-direita-para-esquerda infinite 8s linear;
+  }
+
+  .cano{
+    width: 50px;
+
+    position: absolute;
+    bottom: 30px;
+    right: 50px;
+    /*
+    animation-name: mover-direita-para-esquerda;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    */
+    animation: mover-direita-para-esquerda infinite 2s linear;
+
+  }
+
+  @keyframes mover-direita-para-esquerda {
+    from {
+      right: -300px;
+    }
+
+    to {
+      right: 100%;
+    }
+    
+  }
+
+  .mario{
+    height: 100px;
+
+    position: absolute;
+    bottom: 30px;
+    left: 50px;
+  }
+
+  .chao{
+    background: limegreen;
+    height: 30px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
   }
