Pulo desativado por padrão

--- a/frontend/src/components/Jogo/Jogo.css
+++ b/frontend/src/components/Jogo/Jogo.css
@@ -50,6 +50,25 @@
     left: 50px;
   }
 
+  .mario-pulo{
+    animation: mario-pulo 0.7s;
+  }
+
+  @keyframes mario-pulo{
+    from{
+      bottom: 30px;
+    }
+
+    50% {
+      bottom: 150px;
+    }
+
+    to {
+      bottom: 30px;
+    }
+
+  } 
+
   .chao{
     background: limegreen;
     height: 30px;
